fix: spacing classes

--- a/packages/core/src/styles/spacing.scss
+++ b/packages/core/src/styles/spacing.scss
@@ -440,23 +440,23 @@
 }
 
 .mr-xs {
-    margin-bottom: var(--responsive-space-xs);
+    margin-right: var(--responsive-space-xs);
 }
 
 .mr-s {
-    margin-bottom: var(--responsive-space-s);
+    margin-right: var(--responsive-space-s);
 }
 
 .mr-m {
-    margin-bottom: var(--responsive-space-m);
+    margin-right: var(--responsive-space-m);
 }
 
 .mr-l {
-    margin-bottom: var(--responsive-space-l);
+    margin-right: var(--responsive-space-l);
 }
 
 .mr-xl {
-    margin-bottom: var(--responsive-space-xl);
+    margin-right: var(--responsive-space-xl);
 }
 
 /* BOTTOM */
